--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
                 <a href="/BASKET GAME/game.html" target="_blank"><button class="custom-btn btn-9">BY AKP</button></a>
                 <hr><br><br>
 		      
-		<h4>BASKET GAME🧺</h4>
-                <a href="/shark tank calculato/index.html" target="_blank"><button class="custom-btn btn-9">BY AKP</button></a>
+		<h4>shark tank calculators</h4>
+                <a href="/shark tank calculators/index.html" target="_blank"><button class="custom-btn btn-9">BY AKP</button></a>
                 <hr><br><br>
 
                 <h4>BMR APP💪</h4>
