--- a/index.html
+++ b/index.html
@@ -205,6 +205,10 @@
                 <h4>BASKET GAME🧺</h4>
                 <a href="/BASKET GAME/game.html" target="_blank"><button class="custom-btn btn-9">BY AKP</button></a>
                 <hr><br><br>
+		      
+		<h4>SHARK TANK CALCULATORS🧮🦈</h4>
+                <a href="/shark tank calculators/index.html" target="_blank"><button class="custom-btn btn-9">BY AKP</button></a>
+                <hr><br><br>
 
                 <h4>BMR APP💪</h4>
                 <a href="/BMR app/index.html" target="_blank"><button class="custom-btn btn-9">BY AKP</button></a>
