--- a/shark tank calculators/index.html
+++ b/shark tank calculators/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>SHARK TANK CALCULATOR</h1>
+    <h1>SHARK TANK CALCULATORS 🦈</h1>
     <div class="calculator-container">
         <!-- Sales Tax Calculator Card -->
         <div class="calculator-card">
