--- a/index.html
+++ b/index.html
@@ -98,7 +98,13 @@
                         <h1>Great Intelligence(Artificial)!</h1>
                         <div class="div-line"></div>
 			
-                        <p class="hero">GPT hahah we dont even what that shit is we just use😭</p>
+                        <p class="hero">Creation With Imagination✨</p>
+                      </li>
+			    <li class="caption">
+                        <h1>ATV | Three Boys, Beyond All Limits 🚀</h1>
+                        <div class="div-line"></div>
+			
+                        <p class="hero">Creation With Imagination✨</p>
                       </li>
 
                       <li class="caption">
