--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <p class="hero">From BMR APP to tic tac toe and many interesting projects</p>
                       </li>
                       <li class="caption">
-                        <h1>Great Intelligence(Artificial)!</h1>
+                        <h1>Futuristic approach💫</h1>
                         <div class="div-line"></div>
 			
                         <p class="hero">Creation With Imagination✨</p>
@@ -104,7 +104,7 @@
                         <h1>ATV | Three Boys, Beyond All Limits 🚀</h1>
                         <div class="div-line"></div>
 			
-                        <p class="hero">Creation With Imagination✨</p>
+                        <p class="hero">letss.. go !!!!🏃‍♂️‍➡️</p>
                       </li>
 
                       <li class="caption">
