--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <hr><br><br>
 		
 		
-                <h4>BASKET GAME ONLY PC🧺</h4>
+                <h4>BASKET GAME (ONLY PC)🧺</h4>
                 <a href="/BASKET GAME/game.html" target="_blank"><button class="custom-btn btn-9">BY AKP</button></a>
                 <hr><br><br>
 		      <h4>invoice&billing maker💸</h4>
